# ARIS

./: .env.example  .gitignore  README.md
.agent/skills/antigravity-ide/: SKILL.md
.cursor/: rules.md
aris/: Cargo.toml  errors.josn  errors.json  errors2.json  extract_errors.py  package-lock.json
aris-ui/: index.html  package-lock.json  package.json
aris-ui/src/: App.css  App.tsx  index.css
aris-ui/src/components/: GraphCanvas.tsx
aris-ui/src/lib/: renderer.ts
aris/src/: chaos_test.rs  context.rs  events.rs  github.rs  graph.rs  interner.rs  llm.rs  main.rs  network.rs  orchestrator.rs  parser.rs  traversal.rs  types.rs
aris/ui/: renderer.ts
