[package]
name = "aris"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
base64 = "0.22"
dotenv = "0.15"
rand = "0.8"
